Refactor Application.